2015-06-12 Matt:
	* Returning to simulation. Code is not clean yet!
	* Committing latest version that has refraction included.
	* Adding RefractionTool
	* Compiling will give many warnings due to linking with root.
		- Next step is to remove the ROOT dependencies. It was just easier
		for now to check the math is ok.

2015-03-23 Matt:
	* committing current status for endpoint method.  Not great agreement yet.

2015-03-05 Matt:
	* Updating endpoint formalism with a few fixes.
	* No agreement between ZHS and Endpoint yet. Endpoint seems broken somehow... Timing off?

2015-03-02 Matt:
	* Adding Constants.hh
	* Adding new output for Efield from Endpoint
	* Adding Endpoint formalism to SteppingAction
	* Adding way to writeout E-field information to EventAction

2015-02-24 Matt:
	* Trying to clean up a little.  First round done.

2015-02-10 Matt:
	* Adding new class BeamProfile.hh to read in text file from profile.
	* Charge profile structure included for the beam.
	* Data directory added for necessary data file storage
	* Beam charge distribution added to data

2015-02-09 Matt:
	* Checked update of increasing beam width
	* Need to incorporate beam structure in next update

2014-11-18 Matt:
	* Bunch structure added with delta function spikes.
		- Will add more later to test this crazy bunch structure we will have

2014-11-06 Matt:
	* There was an error in how I was handling the bins. I was putting things into a Profile,
		which will average the result if multiple entries end up in one bin. However this
		is not the way to do it. We are evaluating a function a specific steps in time,
		therefore the binning must remain fixed.  It is too hard to do with scattered
		root scripts, therefore I have written new analysis code.
	* Updates to all scripts that were used in testing are now committed
	* Tagging and then will introduce bunch structure to the beam.

2014-10-17 Matt:
	* Fixing time check in SteppingAction. Including everything in window.