@@ -8,7 +8,7 @@ G4WORKDIR := .
 endif
 
 
-EXTRALIBS := $(shell $(ROOTSYS)/bin/root-config --libs) -lReflex -lCintex 
+#EXTRALIBS := $(shell $(ROOTSYS)/bin/root-config --libs) -lReflex -lCintex 
 
 .PHONY: all
 all: lib bin
@@ -20,10 +20,10 @@ all: lib bin
 #dict.cxx :
 #	rootcint -f dict.cxx -c include/Analysis.h include/LinkDef.h
 
-include $(G4INSTALL)/config/architecture.gmk
+#include $(G4INSTALL)/config/architecture.gmk
 
 #G4NOHIST := true
-CPPFLAGS += $(shell root-config --cflags)
+#CPPFLAGS += $(shell root-config --cflags)
 # Here comes dict.cxx
 #LDFLAGS  += $(shell root-config --libs) #dict.cxx
 
